# Tango

./: .gitignore  .gitmodules  README.md  Readme.md  analyze.py  execute_timer.py  fuzz.json  gen_cov.py  infer.py  infer.sh  main.py  mutplot_stream.py  pyproject.toml  replay.py  replay.sh  requirements.txt  run.sh  run_tests.py  trans_input.py  zoom.py
common/: __init__.py
fuzzer/: FuzzerConfig.py  FuzzerLoop.py  FuzzerSession.py  (+1 more)
targets/zoom/repo/: .gitignore  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.hin  config.hin~  config.status  configure  configure.ac  rpm.spec
targets/zoom/repo/autom4te.cache/: output.0  requests  traces.0  traces.1
targets/zoom/repo/data/: Makefile  Makefile.in
targets/zoom/repo/man/: INSTALL  INSTALL.doom  INSTALL.heretic  INSTALL.hexen  INSTALL.strife  Makefile  Makefile.am  Makefile.in  chocolate-doom.6  chocolate-doom.cfg.5  chocolate-heretic.6  chocolate-heretic.cfg.5  chocolate-hexen.6  chocolate-hexen.cfg.5  chocolate-strife.6  chocolate-strife.cfg.5  default.cfg.5  doom.template  heretic.cfg.5  hexen.cfg.5  strife.cfg.5
targets/zoom/repo/man/bash-completion/: Makefile  Makefile.am  Makefile.in  chocolate-doom  chocolate-heretic  chocolate-hexen  chocolate-strife  doom.template  heretic.template  hexen.template  strife.template
targets/zoom/repo/midiproc/: Makefile  Makefile.in
targets/zoom/repo/opl/: Makefile  Makefile.in
targets/zoom/repo/opl/.deps/: opl.Po  opl3.Po  opl_linux.Po  opl_queue.Po  opl_sdl.Po  opl_timer.Po
targets/zoom/repo/opl/examples/: Makefile  Makefile.in  droplay
targets/zoom/repo/opl/examples/.deps/: droplay.Po
targets/zoom/repo/pcsound/: Makefile  Makefile.in
targets/zoom/repo/pcsound/.deps/: pcsound.Po  pcsound_linux.Po  pcsound_sdl.Po
targets/zoom/repo/pkg/: Makefile  Makefile.in  config.make
targets/zoom/repo/pkg/osx/: Info.plist
targets/zoom/repo/play/: custom.config
targets/zoom/repo/src/: Makefile  Makefile.am  Makefile.in  chocolate-doom  chocolate-heretic  chocolate-heretic-setup  chocolate-hexen-setup  chocolate-server  chocolate-strife  m_fixed.h  resource.rc  setup-res.rc  tables.h
targets/zoom/repo/src/.deps/: aes_prng.Po  d_dedicated.Po  d_event.Po  d_iwad.Po  d_loop.Po  d_mode.Po  deh_io.Po  deh_main.Po  deh_mapping.Po  deh_str.Po  deh_text.Po  gusconf.Po  i_cdmus.Po  i_endoom.Po  i_input.Po  i_joystick.Po  i_main.Po  i_midipipe.Po  i_oplmusic.Po  i_pcsound.Po  i_sdlmusic.Po  i_sdlsound.Po  i_sound.Po  i_system.Po  i_timer.Po  i_video.Po  i_videohr.Po  m_argv.Po  m_bbox.Po  m_cheat.Po  m_config.Po  m_controls.Po  m_fixed.Po  m_misc.Po  memio.Po  midifile.Po  mus2mid.Po  net_client.Po  net_common.Po  net_dedicated.Po  (+21 more)
targets/zoom/repo/src/doom/: Makefile  Makefile.in  am_map.c  am_map.h  d_main.c  g_game.c  m_menu.c  p_inter.c  p_map.c  p_mobj.c  p_setup.c  p_setup.h  p_spec.c  p_tick.c  p_user.c  st_stuff.c
targets/zoom/repo/src/doom/.deps/: am_map.Po  d_main.Po  d_net.Po  deh_ammo.Po  deh_bexstr.Po  deh_cheat.Po  deh_doom.Po  deh_misc.Po  deh_ptr.Po  deh_sound.Po  deh_thing.Po  deh_weapon.Po  doomdef.Po  doomstat.Po  f_finale.Po  f_wipe.Po  g_game.Po  hu_lib.Po  hu_stuff.Po  info.Po  m_menu.Po  m_random.Po  p_ceilng.Po  p_doors.Po  p_enemy.Po  p_floor.Po  p_inter.Po  p_lights.Po  p_map.Po  p_maputl.Po  p_mobj.Po  p_plats.Po  p_pspr.Po  p_saveg.Po  p_setup.Po  p_sight.Po  p_spec.Po  p_switch.Po  p_telept.Po  p_tick.Po  (+15 more)
targets/zoom/repo/src/heretic/: Makefile  Makefile.in
targets/zoom/repo/src/heretic/.deps/: am_map.Po  ct_chat.Po  d_main.Po  d_net.Po  deh_ammo.Po  deh_frame.Po  deh_htext.Po  deh_htic.Po  deh_sound.Po  deh_thing.Po  deh_weapon.Po  f_finale.Po  g_game.Po  in_lude.Po  info.Po  mn_menu.Po  p_ceilng.Po  p_doors.Po  p_enemy.Po  p_floor.Po  p_inter.Po  p_lights.Po  p_map.Po  p_maputl.Po  p_mobj.Po  p_plats.Po  p_pspr.Po  p_saveg.Po  p_setup.Po  p_sight.Po  p_spec.Po  p_switch.Po  p_telept.Po  p_tick.Po  p_user.Po  r_bsp.Po  r_data.Po  r_draw.Po  r_main.Po  r_plane.Po  (+5 more)
targets/zoom/repo/src/hexen/: Makefile  Makefile.in
targets/zoom/repo/src/hexen/.deps/: a_action.Po  am_map.Po  ct_chat.Po  d_net.Po  f_finale.Po  g_game.Po  h2_main.Po  in_lude.Po  info.Po  mn_menu.Po  p_acs.Po  p_anim.Po  p_ceilng.Po  p_doors.Po  p_enemy.Po  p_floor.Po  p_inter.Po  p_lights.Po  p_map.Po  p_maputl.Po  p_mobj.Po  p_plats.Po  p_pspr.Po  p_setup.Po  p_sight.Po  p_spec.Po  p_switch.Po  p_telept.Po  p_things.Po  p_tick.Po  p_user.Po  po_man.Po  r_bsp.Po  r_data.Po  r_draw.Po  r_main.Po  r_plane.Po  r_segs.Po  r_things.Po  s_sound.Po  (+6 more)
targets/zoom/repo/src/setup/: Makefile  Makefile.in  setup-manifest.xml
targets/zoom/repo/src/setup/.deps/: compatibility.Po  display.Po  execute.Po  joystick.Po  keyboard.Po  mainmenu.Po  mode.Po  mouse.Po  multiplayer.Po  sound.Po  txt_joyaxis.Po  txt_joybinput.Po  txt_keyinput.Po  txt_mouseinput.Po
targets/zoom/repo/src/strife/: Makefile  Makefile.in
targets/zoom/repo/src/strife/.deps/: am_map.Po  d_items.Po  d_main.Po  d_net.Po  deh_ammo.Po  deh_cheat.Po  deh_frame.Po  deh_ptr.Po  deh_sound.Po  deh_strife.Po  deh_thing.Po  deh_weapon.Po  doomdef.Po  f_finale.Po  f_wipe.Po  g_game.Po  hu_lib.Po  hu_stuff.Po  m_menu.Po  m_random.Po  m_saves.Po  p_ceilng.Po  p_dialog.Po  p_doors.Po  p_enemy.Po  p_floor.Po  p_inter.Po  p_lights.Po  p_map.Po  p_maputl.Po  p_mobj.Po  p_plats.Po  p_pspr.Po  p_saveg.Po  p_setup.Po  p_sight.Po  p_spec.Po  p_switch.Po  p_telept.Po  p_tick.Po  (+13 more)
targets/zoom/repo/textscreen/: Makefile  Makefile.in
targets/zoom/repo/textscreen/.deps/: txt_button.Po  txt_checkbox.Po  txt_conditional.Po  txt_desktop.Po  txt_dropdown.Po  txt_fileselect.Po  txt_gui.Po  txt_inputbox.Po  txt_io.Po  txt_label.Po  txt_radiobutton.Po  txt_scrollpane.Po  txt_sdl.Po  txt_separator.Po  txt_spinctrl.Po  txt_strut.Po  txt_table.Po  txt_utf8.Po  txt_widget.Po  txt_window.Po  txt_window_action.Po
targets/zoom/repo/textscreen/examples/: Makefile  Makefile.in  calculator  guitest
targets/zoom/repo/textscreen/examples/.deps/: calculator.Po  guitest.Po
targets/zoom/repo/textscreen/fonts/: Makefile  Makefile.in
(+783 files in other folders)
