[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tango"
authors = [
    {name = "Ahmad Hazimeh", email = "ahmad@hazimeh.dev"},
]
description = "A state-aware fuzzing framework."
requires-python = ">=3.11,<3.12"
dependencies = [
    'networkx==3.0',
    'nptyping==2.5.0',
    'websockets==10.0',
    'pydot==1.4.2',
    'ipdb==0.13.13',
    'aioconsole==0.6.1',
    'aiohttp==3.8.4',
    'asynctempfile==0.5.0',
]
dynamic = ["version"]

[project.optional-dependencies]
network = [
    'scapy==2.4.5',
    'pyroute2==0.7.3',
    'pyelftools==0.29',
    'pyroute2==0.7.3',
    'lru-dict==1.1.8',
]
coverage = [
    'posix-ipc==1.0.5',
    'numpy==1.23.4',
    'matplotlib==3.6.2',
    'seaborn==0.12.2'
]
inference = [
    'scikit-learn==1.2.2',
]
hotplug = [
    'asyncinotify==4.0.2'
]

complete = [
    'tango[network]',
    'tango[coverage]',
    'tango[inference]',
    'tango[hotplug]',
]

[tool.setuptools]
packages = ["tango"]

[tool.setuptools.dynamic]
version = {attr = "tango.VERSION"}